# ENEC_ISCA_AE

./: README.md  build_csrc.sh  compressor_test.sh  data_prepare.sh  download_data.sh  rm_build.sh  run_inference.sh
csrc/BF16/ENEC-BF16-121-6-3-16/: snec_compress.cpp  snec_decompress.cpp
csrc/BF16/ENEC-BF16-121-6-4-16/: decompress.cpp  snec_compress.cpp  snec_decompress.cpp
csrc/BF16/ENEC-BF16-121-7-3-16/: snec_compress.cpp  snec_decompress.cpp
csrc/BF16/ENEC-BF16-121-7-4-16/: snec_compress.cpp  snec_decompress.cpp
csrc/BF16/ENEC-BF16-121-8-4-16/: snec_compress.cpp  snec_decompress.cpp
csrc/BF16/ENEC-BF16-122-6-3-16/: snec_compress.cpp  snec_decompress.cpp
csrc/BF16/ENEC-BF16-122-6-4-16/: snec_compress.cpp  snec_decompress.cpp  snec_device.h
csrc/BF16/ENEC-BF16-122-7-3-16/: snec_compress.cpp  snec_decompress.cpp  snec_merge.cpp  snec_utils.h
csrc/BF16/ENEC-BF16-122-7-4-16/: snec_compress.cpp  snec_decompress.cpp
csrc/BF16/ENEC-BF16-122-8-4-16/: snec_compress.cpp  snec_decompress.cpp
csrc/BF16/ENEC-BF16-123-6-3-16/: decompress.cpp  snec_compress.cpp  snec_decompress.cpp
csrc/BF16/ENEC-BF16-123-6-4-16/: snec_compress.cpp  snec_decompress.cpp
csrc/BF16/ENEC-BF16-123-7-3-16/: snec_compress.cpp  snec_decompress.cpp
csrc/BF16/ENEC-BF16-123-7-4-16/: compress.cpp  snec_compress.cpp  snec_decompress.cpp  snec_utils.h
csrc/BF16/ENEC-BF16-123-8-4-16/: snec_compress.cpp  snec_decompress.cpp
csrc/BF16/ENEC-BF16-124-6-3-16/: snec_compress.cpp  snec_decompress.cpp
csrc/BF16/ENEC-BF16-124-6-4-16/: snec_compress.cpp  snec_decompress.cpp  snec_merge.cpp
csrc/BF16/ENEC-BF16-124-7-3-16/: snec_compress.cpp  snec_decompress.cpp
csrc/BF16/ENEC-BF16-124-7-4-16/: CMakeLists.txt  snec_compress.cpp  snec_decompress.cpp
csrc/BF16/ENEC-BF16-124-8-4-16/: snec_compress.cpp  snec_decompress.cpp
csrc/BF16/ENEC-BF16-125-6-3-16/: snec_compress.cpp  snec_decompress.cpp
csrc/BF16/ENEC-BF16-125-6-4-16/: snec_compress.cpp  snec_decompress.cpp
csrc/BF16/ENEC-BF16-125-7-3-16/: snec_compress.cpp  snec_decompress.cpp
csrc/BF16/ENEC-BF16-125-7-4-16/: snec_compress.cpp  snec_decompress.cpp
csrc/BF16/ENEC-BF16-125-8-4-16/: snec_compress.cpp  snec_decompress.cpp
csrc/FP16/ENEC-FP16-10-5-3-16/: snec_compress.cpp  snec_decompress.cpp  snec_utils.h
csrc/FP16/ENEC-FP16-11-5-3-16/: snec_compress.cpp  snec_decompress.cpp
csrc/FP16/ENEC-FP16-11-5-4-16/: snec_compress.cpp  snec_decompress.cpp
csrc/FP16/ENEC-FP16-12-5-3-16/: compress.cpp  (+2 more)
python/: enec_model_compress_compressor.py  enec_model_decompress_compressor.py  global_analysis_comp_enec.py  global_analysis_decomp_enec.py  inference.py  inference_results_bs.csv  load_safetensors.py  logger.py  param_search_enec.py  summarization_enec.py  utils.py
(+57 files in other folders)
